Fix-up Java 8 compatibility with the desktop handler